kubernetes_yaml/crossbar-deploy/crossbar-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: crossbar-svc
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    pod: crossbar
