kubernetes_yaml/crossbar-deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crossbar-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  defaultBackend:
    service:
      name: crossbar-svc
      port:
        number: 8080
  rules:
  - host: crossbar.mydomain.com
    http:
      paths:
        - backend:
            service: 
              name: crossbar-svc
              port: 
                number: 8080
          pathType: ImplementationSpecific
